# aoc2023

./: Cargo.toml
day-01/: Cargo.toml
day-01/src/: lib.rs
day-02/: Cargo.toml
day-02/src/: lib.rs
day-03/: Cargo.toml
day-03/src/: lib.rs
day-04/: Cargo.toml
day-04/src/: lib.rs
day-05/: Cargo.toml
day-05/src/: lib.rs  range.rs
day-06/: Cargo.toml
day-06/src/: lib.rs
day-07/: Cargo.toml
day-07/src/: lib.rs
src/: lib.rs  main.rs  s.rs
template/: Cargo.toml
template/src/: lib.rs
