[package]
name = "day-03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
# arangors = { path = "../../arangors/"}
arangors = "0.5"
async-trait = { version = "0.1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rayon = "1.8"
futures = "0.3"
